@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto

skinparam classAttributeIconSize 0

'left to right direction

class CreateJobController {
    -jobRepository:JobRepository
    -authenticationRepository:AuthenticationRepository


    -getEmployeeFromSession()
    + CreateJobController(jobRepository)
    + createJob(jobName, jobDescription)

}


class CreateJobUI {
    +run()
    +requestData(jobName, jobDescription)
    +submitData()
    +requestJobDescription()
    +requestJobName()
}


class Employee{
    -name:String
    -birthdate:Date
    -admissionDate:Date
    -address
    -mobileContact:String
    -emailContact:String
    -IDdocType:String
    -IDnumber:String
    -taxNumber:String
    -job:Job

    +Employee (String nome,LocalDate dateOfBirth,\nLocalDate admissionDate, String morada, int telemovel,\nString email, String idDocType, int docTypeNumber,\nint taxPayerIdNumber, String role, Job job)
}

class Repositories{
    - instance:Repositories
    - jobRepository:JobRepository
    - jobRepository:JobRepository
    - employeeRepository:EmployeeRepository
    -authenticationRepository:AuthenticationRepository


    + getInstance()
    + getSkillRepository()
    + getJobRepository()
    + getEmployeeRepository()
    + getAuthenticationRepository()
}

class JobRepository{
    + getJobs()
    + validateJobs(newJob)
    + addJob(newJob)
}

class AuthenticationRepository{
    + getEmployeeFromSession()
}

class Job {
    -jobName:String
    -jobDescription:String
    -creator:Employee

    +Job(jobName, jobDescription)
    +validateSkillData(jobName, jobDescription)
}

CreateJobUI "1" ..> "1" CreateJobController

CreateJobController "1" --> "1" Repositories : getInstance

Repositories "1" ..> "1" JobRepository : create

CreateJobController --> Employee : createJob
CreateJobController "1" --> "1" AuthenticationRepository : getCurrentUserSession

Employee ..>Job : .

Employee "1" --> "1" Job : has a

CreateJobController --> JobRepository: add


@enduml
